# vest

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: velocity.h  vest.h
ref/: CMakeLists.txt  velocity.c
src/: CMakeLists.txt
test/: CMakeLists.txt  test.c  vest-test
